2004-10-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b214

	* Fix: Added doctype to view_comments and make it valid HTML 4.01

	* New: Added possibility to delete muliple comments.

	* Fix: De-globalize modify_user.php

2004-10-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b213

	* New: Added rar support. This means Gallery can now handle following archive formats:
		'zip', 'rar', 'cab', 'arj', 'lzh', 'tar', 'gz', 'bz2', 'ace', 'uue', 'jar', 'z'

	* New: Added archive handling functions.

	* Change: Added some Comments in save_photos and adjust to rar support.

	* Change: Replaced some
			$url = eregi_replace("^[[:space:]]+", "", $url);
		with	$url = ltrim($url)

	* Change: removed some unused vars.

2004-10-01  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.5-cvs-b212

	* Change: index.php: Added "rss.php" to $safe_to_include

2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b211

	* Fix: Small tweaks to mambo xml, maybe to alleviate uninstall issues?

	* Fix: fullOnly URLs were using do_command?  No idea why, but fixed.

2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b210

	* Fix: Update the gallery.xml to work with Mambo 4.5.1
	  (Mainly, remove the 'template' section)

2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b209

	* Change: Minor flow change in mambo section of init.php

	* Change: Addition of 'sessionStart' variable to $gallery->session
	  to help debug session issues

2004-09-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b208

	* Change: view_album doesn't need to reference the current album 
	  in breadcrumbs - it's confusing.  view_photo does

2004-09-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b207

	* Fix: Don't unset the mambo session vars immediately after setting them.

	* Change:  Correct a couple popups in view_album

2004-09-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b206

	* Change: If we're in mambo, just set the session info all the time.